2012-04-11 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/groups/group_list.php
	 godmode/reporting/graph_builder.graph_editor.php: Reverted some 
	 modifications in custom graphs metaconsole compatibility.

2012-04-11  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_delete_modules.php: Fixed a 
	minor style bug

2012-04-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/reporting/reporting_builder.php
	godmode/reporting/graphs.php: Respored missing tabs

2012-04-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/reporting/reporting_builder.item_editor.php: Several
	fixes on inventory reports.

2012-04-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/reporting/graph_builder.graph_editor.php: Fixed display
	of agents in custom graphs editor when metaconsole is activated.

2012-04-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/groups/group_list.php
	 godmode/reporting/graphs.php: Several fixes in custom graph editor 
	 with metaconsole activated.

2012-04-10 Dario Rodriguez <dario.rodriguez@artica.es>

	*operation/menu.php,
	godmode/menu.php: Fixed a bug showing extensions with new menu structure.

2012-04-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/ajax/reporting.ajax.php
	 godmode/reporting/reporting_builder.list_items.php
	 godmode/reporting/graph_builder.main.php
	 godmode/reporting/reporting_builder.php
	 godmode/reporting/reporting_builder.item_editor.php: Several fixes 
	 in metaconsole reports.

2012-04-10  Sergio Martin <sergio.martin@artica.es>

	* include/functions_agents.php: Fixed an error when try
	to retrieve policy acl's without agents choosed

2012-04-10  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/pandora.js
	operation/agentes/ver_agente.php
	godmode/massive/massive_add_alerts.php
	godmode/massive/massive_delete_action_alerts.php
	godmode/massive/massive_delete_alerts.php
	godmode/massive/massive_edit_modules.php